--- a/styles/index.css
+++ b/styles/index.css
@@ -1,30 +1,57 @@
+@font-face {font-family: martel; src: url(../martel.ttf);}
+
 * {margin: 0; padding: 0; box-sizing: border-box;}
 
 #container {
     width: 100vw;
     height: 100vh;
     display: flex;
+    overflow: hidden;
 }
 
 #game-screen {
     height: 100vh;
-    width: calc(100vw - 250px);
-    background-color: blue;
+    width: calc(100vw - 200px);
+    background:url(../imgs/backgroundStyleTibia.png) ;
 }
 
 #game-infos {
 height: 100vh;
-background-color: green;
+background: url(../imgs/backgroundStyleTibia.png);
+border-left: 1px solid rgba(183, 183, 183, 0.56);
 width: 250px;
-}
-
-#game-canvas {
-    width: 100%;
-    height: calc(100vh - 150px);
 }
 
 #game-powers {
     width: 100%;
     height: 150px;
-    background-color: purple;
+    background: url(../imgs/backgroundStyleTibia.png);
+    border-right: 1px solid rgba(0, 0, 0, 0.585);
+    font-family: 'martel';
+    border-top: 1px solid rgba(183, 183, 183, 0.56);;
+}
+
+/* TELA PRINCIPAL */
+
+#game-canvas {
+    width: 100%;
+    height: calc(100vh - 150px);
+    display: flex;
+    justify-content: center;
+}
+
+#engine {
+    min-width: 800px;
+    height: 100%;
+    background: url(../imgs/tibiaGrass.png);
+    box-shadow: 1px 1px 10px black;
+}
+
+#player {
+  width: 200px;
+  filter: drop-shadow(1px 1px 5px black);
+}
+
+#player img {
+    width: 100%;
 }
