--- a/styles/index.css
+++ b/styles/index.css
@@ -39,25 +39,31 @@ width: 250px;
     height: calc(100vh - 150px);
     display: flex;
     justify-content: center;
+    align-items: center;
 }
+
 
 #engine {
     min-width: 800px;
-    height: 100%;
+    
+    height: 500px;
     background: url(../imgs/tibiaGrass.png);
     box-shadow: 1px 1px 10px black;
+    display: flex;
+    flex-wrap: wrap;
+
+    
 }
 
 #player {
     width: 120px;
     filter: drop-shadow(1px 1px 5px black);
-    position: absolute;
-    top: 0;
-    left: 0;
+    transition: 0.2s;
 }
 
 #player img {
     width: 100%;
+    
 }
 
 
@@ -176,4 +182,23 @@ width: 250px;
 #mana-output {
     font-size: 10px;
     width: 40px;
+}
+
+
+.blocks {
+    border: 1px solid rgba(0, 0, 0, 0.162);
+    width: 10%;
+    height: 10%;
+    display: flex;
+}
+
+#gp-main-weapon {
+    display: flex;
+    height: 100%;
+    width: 200px;
+    border-right: 1px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    box-shadow: 2px 0px 2px rgba(0, 0, 0, 0.392);
 }
