--- a/styles/index.css
+++ b/styles/index.css
@@ -30,6 +30,8 @@ width: 220px;
     border-right: 1px solid rgba(0, 0, 0, 0.585);
     font-family: 'martel';
     border-top: 1px solid rgba(183, 183, 183, 0.56);
+    display: flex;
+    justify-content: center;
 }
 
 /* TELA PRINCIPAL */
@@ -48,9 +50,11 @@ width: 220px;
     
     height: 500px;
     background: url(../imgs/tibiaGrass.png);
-    box-shadow: 1px 1px 10px black;
+    box-shadow: 1px 1px 3px black;
     display: flex;
     flex-wrap: wrap;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
 
     
 }
@@ -215,17 +219,6 @@ width: 220px;
     display: flex;
 }
 
-#gp-loot {
-    display: flex;
-    height: 100%;
-    width: 200px;
-    border-right: 1px solid rgba(0, 0, 0, 0.585);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
-    border-top: 1px solid rgba(183, 183, 183, 0.56);
-    border-left: 1px solid rgba(183, 183, 183, 0.56);
-    box-shadow: 2px 0px 2px rgba(0, 0, 0, 0.392);
-}
-
 #infos-set {
     display: flex;
     height: 250px;
@@ -315,4 +308,72 @@ width: 220px;
 
 #shop-img:active {
     background-color: rgba(0, 0, 0, 0.3);
+}
+
+#gp-loot {
+    display: flex;
+    height: 100%;
+    width: 200px;
+    border-right: 2px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    box-shadow: -2px 0px 2px rgba(0, 0, 0, 0.392);
+    background: url(../imgs/backgroundStyleTibia.png);
+}
+
+#gp-powers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 500px;
+    border-right: 1px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    box-shadow: 2px 0px 2px rgba(0, 0, 0, 0.392);
+    background: url(../imgs/backgroundStyleTibia.png);
+}
+
+#powers {
+    width: 400px;
+    height: 100px;
+ 
+    display: flex;
+    justify-content: space-around;
+}
+
+.character-power {
+    background: url(../imgs/backgroundStyleTibia.png);
+    box-shadow: 1px 1px 1px black;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    width: 50px;
+    height: 100%;
+    border-radius: 8px;
+    border-right: 1px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#character-power-filter {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.character-power p {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 10px;
 }
