--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,7 @@
 height: 100vh;
 background: url(../imgs/backgroundStyleTibia.png);
 border-left: 1px solid rgba(183, 183, 183, 0.56);
-width: 220px;
+width: 200px;
 }
 
 #game-powers {
@@ -133,7 +133,7 @@ width: 220px;
 
 #bar-life-div {
 
-    width: 150px;
+    width: 120px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -175,7 +175,7 @@ width: 220px;
 }
 
 #bar-mana-div {
-    width: 150px;
+    width: 120px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -327,7 +327,7 @@ width: 220px;
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 500px;
+    width: 550px;
     border-right: 1px solid rgba(0, 0, 0, 0.585);
     border-bottom: 1px solid rgba(0, 0, 0, 0.585);
     border-top: 1px solid rgba(183, 183, 183, 0.56);
@@ -337,7 +337,7 @@ width: 220px;
 }
 
 #powers {
-    width: 400px;
+    width: 450px;
     height: 100px;
  
     display: flex;
@@ -371,9 +371,18 @@ width: 220px;
     align-items: center;
     justify-content: space-evenly;
     background-color: rgba(255, 255, 255, 0.2);
+    transition: 0.4s;
+}
+
+.character-power h3 {
+    font-size: 12px;
 }
 
 .character-power p {
     font-family: 'Courier New', Courier, monospace;
     font-size: 10px;
+}
+
+#character-power-filter:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
