--- a/styles/index.css
+++ b/styles/index.css
@@ -345,8 +345,11 @@ width: 200px;
 
 /*  PARTE DE BAIXO */
 
-#gp-loot {
+#gp-map {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     height: 100%;
     width: 200px;
     border-right: 2px solid rgba(0, 0, 0, 0.585);
@@ -355,6 +358,35 @@ width: 200px;
     border-left: 1px solid rgba(183, 183, 183, 0.56);
     box-shadow: -2px 0px 2px rgba(0, 0, 0, 0.392);
     background: url(../imgs/backgroundStyleTibia.png);
+}
+
+#map-header {
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    border-right: 2px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    box-shadow: -2px 0px 2px rgba(0, 0, 0, 0.392);
+    text-shadow: 2px 2px 2px black;
+    font-size: 24px;
+}
+
+#map-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#gp-map img {
+    width: 120px;
+    filter: drop-shadow(3px 3px 5px black);
+    transition: 1s;
+}
+#gp-map img:hover {
+    transform: scale(1.1);
 }
 
 #gp-powers {
