--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -1,10 +1,12 @@
 #enemy-rat {
-    width: 100%;
-    height: 100%;
+    width: 80px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: absolute;
+    transition: 0.4s;
 
 }
 #div-rat-life {
@@ -20,7 +22,19 @@
 }
 
 #rat-life {
-   
+   transition: 0.2s linear;
     background-color: green;
     height: 100%;    
+}
+
+#rat-image {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+#rat-image img {
+    width: 100%;
 }
