--- a/styles/index.css
+++ b/styles/index.css
@@ -46,12 +46,12 @@ width: 200px;
 
 
 #engine {
-    min-width: 800px;
+    width: 800px;
     
     height: 500px;
     background: url(../imgs/tibiaGrass.png);
     box-shadow: 1px 1px 3px black;
-    display: flex;
+    
     flex-wrap: wrap;
     border-top: 1px solid black;
     border-left: 1px solid black;
@@ -60,20 +60,26 @@ width: 200px;
 }
 
 #player {
-    width: 100px;
+    width: 80px;
+    height: 50px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     transition: 0.2s;
+    position: absolute;
 }
 
 #div-player-life {
-    width: 80%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 
 }
 #player-max-life {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    width: 80%;
     height: 4px;
     background-color: rgba(39, 39, 39, 0.554);
     border: 1px solid black;
@@ -378,6 +384,11 @@ width: 200px;
     width: 100%;
     display: flex;
     justify-content: center;
+    border-right: 2px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    box-shadow: -2px -2px 2px rgba(0, 0, 0, 0.392);
 }
 
 #gp-map img {
