--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: absolute;
+    position: relative;
     transition: 0.4s;
 
 }
