--- a/styles/index.css
+++ b/styles/index.css
@@ -67,7 +67,7 @@ width: 200px;
     flex-direction: column;
     align-items: center;
     transition: 0.2s;
-    position: relative;
+    position: absolute;
 }
 
 #div-player-life {
