--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     position: relative;
     transition: 0.4s;
+    transform: translate(0px, 0px);
 
 }
 #div-rat-life {
