--- a/styles/index.css
+++ b/styles/index.css
@@ -66,7 +66,7 @@ width: 200px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    transition: 0.2s;
+    transition: 0.2s linear;
     position: absolute;
 }
 
@@ -78,7 +78,7 @@ width: 200px;
 }
 #player-max-life {
     display: flex;
-    justify-content: center;
+
     width: 80%;
     height: 4px;
     background-color: rgba(39, 39, 39, 0.554);
@@ -89,6 +89,7 @@ width: 200px;
     width: 100%;
     background-color: green;
     height: 100%;
+    transition: 0.5s;
 }
 #player img {
     width: 100%;
@@ -141,6 +142,7 @@ width: 200px;
     align-items: center;
     text-align: center;
     justify-content: center;
+    
 
 }
 
@@ -179,8 +181,10 @@ width: 200px;
     width: 100%;
     height: 100%;
     border-radius: 5px;
+
     animation: lifeAnime 4s linear infinite;
-    /* RED BACKGROUND*/
+    transition: 0.5s;
+
 }
 
 @keyframes lifeAnime { 
@@ -231,6 +235,7 @@ width: 200px;
     height: 100%;
     border-radius: 5px;
     animation: manaAnime 4s linear infinite;
+    transition: 0.5s;
 }
 
 @keyframes manaAnime { 
