--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -49,11 +49,12 @@
     text-shadow: 1px 1px 1px black;
     margin-top: 50px;
     font-family: 'tahoma8';
-    font-size: 12px;
-    margin-left: 25px;
+    font-size: 10px;
+    margin-left: 35px;
     transform: translateY(0px);
     /* animation: animeHit 1s; */
     opacity: 0;
+    font-weight: 800;
 }
 
 @keyframes animeHit {
@@ -65,4 +66,18 @@
         transform: translateY(-30px);
         opacity: 1;
     }
+}
+
+#hit-player {
+    position: absolute;
+    color: red;
+    text-shadow: 1px 1px 1px black;
+    margin-top: 50px;
+    font-family: 'tahoma8';
+    font-size: 10px;
+    margin-left: 35px;
+    transform: translateY(0px);
+    /* animation: animeHit 1s; */
+    opacity: 1;
+    font-weight: 800;
 }
