--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -68,9 +68,34 @@
     }
 }
 
+@keyframes animeHitOut {
+    0% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-30px);
+        opacity: 0;
+    }
+}
+
 #hit-player {
     position: absolute;
     color: red;
+    text-shadow: 1px 1px 1px black;
+    margin-top: 50px;
+    font-family: 'tahoma8';
+    font-size: 10px;
+    margin-left: 35px;
+    transform: translateY(0px);
+    /* animation: animeHit 1s; */
+    opacity: 1;
+    font-weight: 800;
+}
+
+#heal-player {
+    position: absolute;
+    color: blue;
     text-shadow: 1px 1px 1px black;
     margin-top: 50px;
     font-family: 'tahoma8';
