--- a/styles/index.css
+++ b/styles/index.css
@@ -67,8 +67,9 @@ width: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100;
+    z-index: 0;
 }
+#loot-alert-div p {z-index: 10;}
 #player {
     width: 80px;
     height: 50px;
