--- a/styles/index.css
+++ b/styles/index.css
@@ -449,6 +449,22 @@ width: 200px;
     /* justify-content: space-around; */
 }
 #gp-powers h2{color: white; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.921); font-size: 28px;}
+.character-empty-power {
+    background: url(../imgs/backgroundStyleTibia.png);
+    box-shadow: 1px 1px 1px black;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    width: 50px;
+    height: 100%;
+    border-right: 1px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
 .character-power {
     background: url(../imgs/backgroundStyleTibia.png);
     box-shadow: 1px 1px 1px black;
@@ -456,7 +472,6 @@ width: 200px;
     text-shadow: 1px 1px 1px black;
     width: 50px;
     height: 100%;
-  
     border-right: 1px solid rgba(0, 0, 0, 0.585);
     border-bottom: 1px solid rgba(0, 0, 0, 0.585);
     border-top: 1px solid rgba(183, 183, 183, 0.56);
@@ -491,6 +506,47 @@ width: 200px;
 
 #character-power-filter:hover {
     background-color: rgba(255, 255, 255, 0.3);
+}
+
+.character-potion {
+    background: url(../imgs/backgroundStyleTibia.png);
+    box-shadow: 1px 1px 1px black;
+    color: white;
+    text-shadow: 1px 1px 1px black;
+    width: 50px;
+    height: 100%;
+    border-right: 1px solid rgba(0, 0, 0, 0.585);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.585);
+    border-top: 1px solid rgba(183, 183, 183, 0.56);
+    border-left: 1px solid rgba(183, 183, 183, 0.56);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 4px;
+    
+}
+.character-potion-filter {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items:center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+.character-potion-filter:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+
+.character-potion h3 {
+    font-size: 12px;
+}
+.character-potion p {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 10px;
+    font-weight: bold;
 }
 
 #fire-field {
