--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,7 @@
     height: 100vh;
     width: calc(100vw - 200px);
     background:url(../imgs/backgroundStyleTibia.png) ;
+    
 }
 
 #game-infos {
@@ -21,6 +22,7 @@ height: 100vh;
 background: url(../imgs/backgroundStyleTibia.png);
 border-left: 1px solid rgba(183, 183, 183, 0.56);
 width: 200px;
+
 }
 
 #game-powers {
@@ -42,17 +44,21 @@ width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 
 #engine {
-    width: 800px;
-    height: 500px;
+    width: 10000px;
+    height: 10000px;
     background: url(../imgs/tibiaGrass.png);
     box-shadow: 1px 1px 3px black;   
     border-top: 1px solid black;
     border-left: 1px solid black;
-    
+    margin-top: 9800px;
+    margin-left: 800px;
+    transition: 0.2s linear;
+    overflow: hidden;
 }
 
 #player {
@@ -98,9 +104,11 @@ width: 200px;
     height: 100%;
     transition: 0.5s;
 }
-#player img {
-    width: 50%;
-   
+#player-img {
+    background: url(../imgs/characterSprite.png);
+    width: 50px;
+    transform: scale(2.5);
+    height: 50px;
 }
 
 
