--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -1,3 +1,99 @@
+/* FROG */
+    /* FROG */
+
+#enemy-frog {
+    width: 80px;
+    height: 80px;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    transition: 0.4s;
+    transform: translate(0px, 0px);
+}
+#div-frog-name {color: rgb(22, 135, 22); font-size: 12px; font-family: 'tahoma8';  text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; font-weight: 900;}
+#div-frog-life {width: 80%;}
+#frog-max-life {width: 100%; height: 4px; background-color: rgba(39, 39, 39, 0.554); border: 1px solid black;}
+#frog-life {transition: 0.2s linear; background-color: green; height: 100%;}
+
+#frog-image {
+    width: 64px;
+    height: 64px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background: url(../imgs/sapo.png);
+    margin-top: -14px;
+}
+
+/* Fire Horse */
+    /* Fire Horse */
+
+    #enemy-fire-horse {
+        width: 80px;
+        height: 80px;
+        display: flex;
+    
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
+        transition: 0.4s;
+        transform: translate(0px, 0px);
+    }
+    #div-fire-horse-name {color: rgb(22, 135, 22); font-size: 12px; font-family: 'tahoma8'; text-shadow: 0px 0px 2px black; font-weight: 900;}
+    #div-fire-horse-life {width: 80%;}
+    #fire-horse-max-life {width: 100%; height: 4px; background-color: rgba(39, 39, 39, 0.554); border: 1px solid black;}
+    #fire-horse-life {transition: 0.2s linear; background-color: green; height: 100%;}
+    
+    #fire-horse-image {
+        width: 64px;
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        background: url(../imgs/fireHorse.png);
+        margin-top: -5px;
+    }
+    
+    
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #enemy-rat {
     width: 80px;
     height: 50px;
@@ -13,48 +109,8 @@
 #div-rat-life {width: 80%;}
 #rat-max-life {width: 100%; height: 4px; background-color: rgba(39, 39, 39, 0.554); border: 1px solid black;}
 #rat-life {transition: 0.2s linear; background-color: green; height: 100%;}
-#rat-image {width: 40px; height: 40px; display: flex; justify-content: center; align-content: center;}
-#rat-image img {width: 100%;}
-
-
-
-/* FROG */
-    /* FROG */
-        /* FROG */
-            /* FROG */
-                /* FROG */
-
-
-#enemy-frog {
-    width: 80px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    transition: 0.4s;
-    transform: translate(0px, 0px);
-}
-
-#div-frog-life {width: 80%;}
-#frog-max-life {width: 100%; height: 4px; background-color: rgba(39, 39, 39, 0.554); border: 1px solid black;}
-#frog-life {transition: 0.2s linear; background-color: green; height: 100%;}
-
-#frog-image {
-    width: 64px;
-    height: 64px;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    background: url(../imgs/sapo.png);
-    margin-top: -14px;
-}
-
-
-
-
-
+#rat-image {margin: 10px;width: 50px; height: 50px; display: flex; justify-content: center; align-content: center;}
+#rat-image img {width: 100%; height: 100%; }
 
 /* HIT */
     /* HIT */
