--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -13,7 +13,7 @@
     transition: 0.4s;
     transform: translate(0px, 0px);
 }
-#div-frog-name {color: rgb(22, 135, 22); font-size: 12px; font-family: 'tahoma8';  text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; font-weight: 900;}
+#div-frog-name {color: rgb(22, 135, 22); font-size: 16px; font-family: 'tahoma8';  text-shadow: 1px 0 0 black, -1px 0 0 black, 0 1px 0 black, 0 -1px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; font-weight: 900;}
 #div-frog-life {width: 80%;}
 #frog-max-life {width: 100%; height: 4px; background-color: rgba(39, 39, 39, 0.554); border: 1px solid black;}
 #frog-life {transition: 0.2s linear; background-color: green; height: 100%;}
@@ -43,7 +43,7 @@
         transition: 0.4s;
         transform: translate(0px, 0px);
     }
-    #div-fire-horse-name {color: rgb(22, 135, 22); font-size: 12px; font-family: 'tahoma8'; text-shadow: 0px 0px 2px black; font-weight: 900;}
+    #div-fire-horse-name {color: rgb(22, 135, 22); font-size: 16px; font-family: 'tahoma8';  text-shadow: 1px 0 0 black, -1px 0 0 black, 0 1px 0 black, 0 -1px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; font-weight: 900;}
     #div-fire-horse-life {width: 80%;}
     #fire-horse-max-life {width: 100%; height: 4px; background-color: rgba(39, 39, 39, 0.554); border: 1px solid black;}
     #fire-horse-life {transition: 0.2s linear; background-color: green; height: 100%;}
