--- a/styles/enemies.css
+++ b/styles/enemies.css
@@ -59,6 +59,35 @@
     }
     
     
+    /* Ice Horse */
+    /* Ice Horse */
+
+    #enemy-ice-horse {
+        width: 80px;
+        height: 80px;
+        display: flex;
+    
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
+        transition: 0.4s;
+        transform: translate(0px, 0px);
+    }
+    #div-ice-horse-name {color: rgb(22, 135, 22); font-size: 16px; font-family: 'tahoma8';  text-shadow: 1px 0 0 black, -1px 0 0 black, 0 1px 0 black, 0 -1px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black; font-weight: 900;}
+    #div-ice-horse-life {width: 80%;}
+    #ice-horse-max-life {width: 100%; height: 4px; background-color: rgba(39, 39, 39, 0.554); border: 1px solid black;}
+    #ice-horse-life {transition: 0.2s linear; background-color: green; height: 100%;}
+    
+    #ice-horse-image {
+        width: 64px;
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        background: url(../imgs/fireHorse.png);
+        margin-top: -5px;
+    }
     
 
 
