--- a/styles/index.css
+++ b/styles/index.css
@@ -57,7 +57,7 @@ width: 200px;
     border-left: 1px solid black;
     margin-top: 9800px;
     margin-left: 500px;
-    transition: 0.2s linear;
+    transition: 0.6s linear;
     overflow: hidden;
     display: flex;
 
@@ -65,12 +65,12 @@ width: 200px;
 
 #player {
     width: 80px;
-    height: 50px;
+    height: 100px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    transition: 0.2s linear;
+    transition: 0.6s linear;
     position: absolute;
 }
 #heal-player {
@@ -94,10 +94,12 @@ width: 200px;
 #player-life {width: 100%; background-color: green; height: 100%; transition: 0.5s;}
 #player-mana {width: 100%; background-color: blue; height: 100%; transition: 0.5s;}
 #player-img {
-    background: url(../imgs/characterSprite.png);
-    width: 50px;
-    transform: scale(2);
-    height: 50px;
+    background: url(../imgs/player/down3.png);
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  background-size: 50px;
+  margin-top: 4px;
 }
 
 
